# intents-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  audit_enum.py  audit_report.py  build.rs  build_v2_audit.py  comprehensive_audit.py  find_unavailable.py  recount.py  sdk_all_symbols.txt  strict_audit.py  verify_exempt.sh
examples/: 01_smoke.rs  02_intent_definition_basic.rs  03_intent_response_user_activity.rs  04_intent_handler_provider.rs  05_intent_donation_metadata.rs  06_intent_extension_default.rs  07_in_parameter_roundtrip.rs  08_in_object_roundtrip.rs  09_in_vocabulary_roundtrip.rs  10_in_relevant_shortcut_basic.rs  11_in_interaction_basic.rs  12_in_relevant_shortcut_store_basic.rs  13_in_person_roundtrip.rs  14_in_file_roundtrip.rs  15_intent_helpers.rs  16_support_roundtrip.rs  17_call_roundtrip.rs  18_focus_roundtrip.rs  19_message_roundtrip.rs  20_reservation_roundtrip.rs  21_intent_extras_roundtrip.rs  22_response_extras_roundtrip.rs  23_handler_extras_roundtrip.rs  24_resolution_extras_roundtrip.rs  25_intent_error_codes.rs  26_async_interaction.rs  27_async_preferences.rs  28_async_voice_shortcuts.rs
src/: async_api.rs  call.rs  error.rs  error_code.rs  focus.rs  handler_extras.rs  in_file.rs  in_interaction.rs  in_object.rs  in_parameter.rs  in_person.rs  in_relevant_shortcut.rs  in_relevant_shortcut_store.rs  in_vocabulary.rs  intent.rs  intent_definition.rs  intent_donation.rs  intent_extension.rs  intent_extras.rs  intent_handler.rs  intent_resolution.rs  intent_response.rs  interaction.rs  lib.rs  message.rs  preferences.rs  private.rs  relevant.rs  reservation.rs  resolution_extras.rs  response_extras.rs  support.rs  voice_shortcut.rs
swift-bridge/: Package.swift
tests/: async_api_tests.rs  call_tests.rs  focus_tests.rs  handler_extras_tests.rs  in_file_tests.rs  (+20 more)
(+56 files in other folders)
