[package]
name = "intents"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/intents-rs"
repository = "https://github.com/doom-fish/intents-rs"
description = "Safe Rust bindings for Apple's Intents framework - Siri shortcuts and donations on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["intents", "siri", "shortcuts", "macos", "apple"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "COVERAGE_AUDIT.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "intents"
crate-type = ["lib"]

[features]
default = []
async = ["dep:doom-fish-utils"]
cargo-clippy = []

[dependencies]
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = "0.1", optional = true }

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[[example]]
name = "26_async_interaction"
required-features = ["async"]

[[example]]
name = "27_async_preferences"
required-features = ["async"]

[[example]]
name = "28_async_voice_shortcuts"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
